--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+alembic==1.13.0
 annotated-types==0.6.0
 anyio==3.7.1
 fastapi==0.104.1
+greenlet==3.0.2
 idna==3.6
+Mako==1.3.0
+MarkupSafe==2.1.3
 pydantic==2.5.2
 pydantic_core==2.14.5
 sniffio==1.3.0
+SQLAlchemy==2.0.23
 starlette==0.27.0
 typing_extensions==4.8.0
