--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ idna==3.6
 Mako==1.3.0
 MarkupSafe==2.1.3
 pydantic==2.5.2
+pydantic-settings==2.1.0
 pydantic_core==2.14.5
+python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
