fix indicators and public models

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ DB_NAME=
 DB_ECHO=False
 SECRET_KEY=
 
-PROJECT_NAME='Taskee - таск трекер'
-PROJECT_VERSION="0.2.0"
+PROJECT_NAME='Inschooltech'
+PROJECT_VERSION="0.1.0"
 JWT_LIFETIME_SECONDS=2592000 #1 month
 
 
