--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ DB_NAME=
 DB_ECHO=False
 SECRET_KEY=
 
-PROJECT_NAME='Inschooltech'
+PROJECT_NAME="Inschooltech"
 PROJECT_VERSION="0.1.0"
-JWT_LIFETIME_SECONDS=2592000 #1 month
+JWT_LIFETIME_SECONDS=2592000
 
 
 PGADMIN_EMAIL=
