--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,33 @@
-alembic==1.13.0
+alembic==1.13.1
 annotated-types==0.6.0
-anyio==3.7.1
+anyio==4.3.0
+async-timeout==4.0.3
+asyncpg==0.29.0
 bcrypt==4.1.2
 cffi==1.16.0
 click==8.1.7
 cryptography==42.0.5
 dnspython==2.6.1
 email_validator==2.1.1
-fastapi==0.104.1
+fastapi==0.110.0
 fastapi-users==12.1.3
-greenlet==3.0.2
+fastapi-users-db-sqlalchemy==6.0.1
+greenlet==3.0.3
 h11==0.14.0
 idna==3.6
 makefun==1.15.2
-Mako==1.3.0
-MarkupSafe==2.1.3
+Mako==1.3.2
+MarkupSafe==2.1.5
 passlib==1.7.4
 pycparser==2.21
-pydantic==2.5.2
-pydantic-settings==2.1.0
-pydantic_core==2.14.5
+pydantic==2.6.3
+pydantic-settings==2.2.1
+pydantic_core==2.16.3
 PyJWT==2.8.0
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 python-multipart==0.0.7
-sniffio==1.3.0
-SQLAlchemy==2.0.23
-starlette==0.27.0
-typing_extensions==4.8.0
-uvicorn==0.25.0
+sniffio==1.3.1
+SQLAlchemy==2.0.27
+starlette==0.36.3
+typing_extensions==4.10.0
+uvicorn==0.27.1
