--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ PROJECT_NAME="Inschooltech"
 PROJECT_VERSION="0.1.0"
 JWT_LIFETIME_SECONDS=2592000
 
-
+# for docker-compose-dev:
 PGADMIN_EMAIL=
 PGADMIN_PASSWORD=
+
+# for docker-compose:
+DOCKERHUB_USERNAME=
+DOCKERHUB_REPOSITORY_NAME=
