--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
         with:
         #   context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/inschooltech_fastapi:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
